--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_popular">Popular</string>
     <string name="title_search">Search</string>
     <string name="title_favorite">Favorite</string>
+    <string name="no_data_detected">No Data Detected</string>
 </resources>
