--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Movie Apps</string>
-    <string name="title_popular">Popular</string>
+    <string name="title_popular">Now Playing</string>
     <string name="title_search">Search</string>
     <string name="title_favorite">Favorite</string>
     <string name="no_data_detected">No Data Detected</string>
