--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="movie_image">Movie Image</string>
     <string name="movie_name">Movie Name</string>
+    <string name="popularity">Popularity</string>
 </resources>
