--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
     <string name="app_name">Movie Apps</string>
     <string name="title_popular">Now Playing</string>
-    <string name="title_search">Search</string>
+    <string name="title_about">Setting</string>
     <string name="title_favorite">Favorite</string>
     <string name="no_data_detected">No Data Detected</string>
-    <string name="something_wrong">Oops.. something went wrong</string>
     <string name="movie_image">Movie Image</string>
     <string name="movie_name">Movie Name</string>
     <string name="overview">overview</string>
@@ -15,4 +14,8 @@
     <string name="movie_background">Movie Background</string>
     <string name="movie_imageposter">Movie Image</string>
     <string name="favorite_button">Favorite Button</string>
+    <string name="application_setting">Application Setting</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="settings">Settings</string>
 </resources>
